--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -6,41 +6,52 @@
 #    By: kchenna <kchenna@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/10/02 18:03:23 by kchenna           #+#    #+#              #
-#    Updated: 2018/10/02 21:10:08 by kchenna          ###   ########.fr        #
+#    Updated: 2018/10/02 21:58:56 by kchenna          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = libft.a
+CC = gcc
+CFLAGS = -Wall -Wextra -Werror
 INCLUDES = ./includes
 SRC_DIR = ./srcs
-OBJS = ./objs
 SRCS = $(SRC_DIR)/ft_putchar.c \
 		$(SRC_DIR)/ft_putstr.c \
 		$(SRC_DIR)/ft_strcmp.c \
 		$(SRC_DIR)/ft_strlen.c \
 		$(SRC_DIR)/ft_swap.c
 
-OUT = $(OBJS)/ft_putchar.o \
-		$(OBJS)/ft_putstr.o \
-		$(OBJS)/ft_strcmp.o \
-		$(OBJS)/ft_strlen.o \
-		$(OBJS)/ft_swap.o
+OUT = ft_putchar.o \
+		ft_putstr.o \
+		ft_strcmp.o \
+		ft_strlen.o \
+		ft_swap.o
 
 all: $(NAME)
 
-$(NAME):
-	gcc -Wall -Wextra -Werror -c $(SRC) -I $(INCLUDES)
+$(NAME): $(OUT)
 	ar rc $(NAME) $(OUT)
 	ranlib $(NAME)
 
-.PHONY: clean
+ft_putchar.o: $(SRC_DIR)/ft_putchar.c $(INCLUDES)/ft_putchar.h
+	$(CC) $(CFLAGS) -c $(SRC_DIR)/ft_putchar.c -I $(INCLUDES)
+
+ft_putstr.o: $(SRC_DIR)/ft_putstr.c $(INCLUDES)/ft_putstr.h
+	$(CC) $(CFLAGS) -c $(SRC_DIR)/ft_putstr.c -I $(INCLUDES)
+
+ft_strcmp.o: $(SRC_DIR)/ft_strcmp.c
+	$(CC) $(CFLAGS) -c $(SRC_DIR)/ft_strcmp.c -I $(INCLUDES)
+
+ft_strlen.o: $(SRC_DIR)/ft_strlen.c
+	$(CC) $(CFLAGS) -c $(SRC_DIR)/ft_strlen.c -I $(INCLUDES)
+
+ft_swap.o: $(SRC_DIR)/ft_swap.c
+	$(CC) $(CFLAGS) -c $(SRC_DIR)/ft_swap.c -I $(INCLUDES)
+
 clean:
 	/bin/rm -f $(OUT)
 
-fclean:
-	clean
+fclean: clean
 	/bin/rm -f $(NAME)
 
-re:
-	fclean
-	all
+re: fclean all
