updated logo and favicon

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl: '/42'
 # compass configuration
 compass:
   # an avatar or logo (optional)
-  logo: "/images/compass.svg"
+  logo: "/images/compass.ico"
   # author will appear under the avatar (optional)
   author: "Chenna Kautilya"
   # tagline will appear under the title (optional)
